--- a/templates/repo.local.erb
+++ b/templates/repo.local.erb
@@ -11,6 +11,9 @@
 <% if @my_cvmfs_quota_limit and  @my_cvmfs_quota_limit != '' -%>
 CVMFS_QUOTA_LIMIT='<%= @my_cvmfs_quota_limit %>'
 <% end -%>
+<% if @cvmfs_memcache_size -%>
+CVMFS_MEMCACHE_SIZE=<%= @cvmfs_memcache_size %>
+<% end -%>
 <% if @cvmfs_http_proxy and  @cvmfs_http_proxy != '' -%>
 CVMFS_HTTP_PROXY='<%= @cvmfs_http_proxy %>'
 <% end -%>
